--- a/src/sayacScript.css
+++ b/src/sayacScript.css
@@ -1,5 +1,61 @@
-.counter{
-
+* {
+    margin: 0;
+    box-sizing: border-box;
+    font-family: Arial, Helvetica, sans-serif;
     color: blue;
-    font-size: 40px ;
 }
+
+body {
+    min-height: 100vh;
+    min-width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.container {
+    width: 100%;
+    height: 250px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    background-color: bisque;
+}
+
+.container .sonuc {
+    border: 3px solid rgb(0, 30, 128);
+    margin: 10px 0 10px 0;
+    width: 50%;
+    font-size: 50px;
+}
+
+.container .butonlar {
+    width: 80%;
+    margin: 10px 0 10px 0;
+}
+
+.counter-button {
+    margin: 0 10px 0 10px;
+    font-size: 25px;
+    width: 50px;
+    border-radius: 7px;
+    background-color: aqua;
+}
+
+.container .input-alani {
+    margin: 10px;
+}
+
+input {
+    border-radius: 5px;
+    transition: 0.5s;
+}
+
+input:hover {
+    border-color: aqua;
+    font-size: 14px;
+    box-shadow: 2px 4px #888888;
+}
+
