--- a/src/sayacScript.css
+++ b/src/sayacScript.css
@@ -2,10 +2,13 @@
     margin: 0;
     box-sizing: border-box;
     font-family: Arial, Helvetica, sans-serif;
-    color: blue;
+    color: rgb(32, 32, 32);
 }
 
 body {
+    background-image: url("counterapp-background.jpg");
+    background-position: center;
+    background-size: cover;
     min-height: 100vh;
     min-width: 100%;
     display: flex;
@@ -14,26 +17,30 @@ body {
 }
 
 .container {
-    width: 100%;
-    height: 250px;
+    width: 125%;
+    height: 350px;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     text-align: center;
-    background-color: bisque;
+    background-color: rgb(206, 204, 201, 0.90);
+    backface-visibility: visible;
+    border-radius: 25px;
 }
 
 .container .sonuc {
-    border: 3px solid rgb(0, 30, 128);
-    margin: 10px 0 10px 0;
-    width: 50%;
+    
+    border: 1px solid rgb(120, 121, 122);
+    border-radius: 10px;
+    margin: 10px 0 75px 0;
+    width: 80%;
     font-size: 50px;
 }
 
 .container .butonlar {
     width: 80%;
-    margin: 10px 0 10px 0;
+    margin: 10px 0 30px 0px;
 }
 
 .counter-button {
@@ -41,21 +48,27 @@ body {
     font-size: 25px;
     width: 50px;
     border-radius: 7px;
-    background-color: aqua;
+    background-color: rgb(163, 162, 162);
+    border: 1px; 
 }
 
 .container .input-alani {
     margin: 10px;
+    border: 1px solid rgb(120, 121, 122);
+    border-radius: 4px;
+
+    
+    
+    
 }
 
-input {
-    border-radius: 5px;
-    transition: 0.5s;
-}
 
+
+/*
 input:hover {
-    border-color: aqua;
+    border-color: rgb(126, 125, 125);
     font-size: 14px;
-    box-shadow: 2px 4px #888888;
+    box-shadow: 3px  #888888;
 }
 
+*/
